Update Styling; Rearrange CSS: Replace Logo

--- a/Examples/index.html
+++ b/Examples/index.html
@@ -10,16 +10,16 @@
 <body>
     <div class="header-container">
         <div class="header">
-            <img id="header-logo" src="Logo.png">
+            <img id="header-logo" src="logo-2.png">
         </div>
         <nav id="main-nav">
             <ul>
-                <li><a href="/">HOME</a></li>
-                <li><a>PROFILE</a></li>
-                <li><a>ROLES</a></li>
-                <li><a>PROJECTS</a></li>
-                <li><a>POLICIES</a></li>
-                <li><a>SETTINGS</a></li>
+                <li class="main-nav-item"><a href="/">HOME</a></li>
+                <li class="main-nav-item"><a>PROFILE</a></li>
+                <li class="main-nav-item"><a>ROLES</a></li>
+                <li class="main-nav-item"><a>PROJECTS</a></li>
+                <li class="main-nav-item"><a>POLICIES</a></li>
+                <li class="main-nav-item"><a>SETTINGS</a></li>
             </ul>
         </nav>
     </div>
@@ -28,19 +28,19 @@
         <div class="map-container">
             <nav id="map-nav">
                 <ul>
-                    <li class="map-nav-item">Map</li>
-                    <li class="map-nav-item">Calendar</li>
-                    <li class="map-nav-item">Noticeboard</li>
+                    <li class="map-nav-item"><a>Map</a></li>
+                    <li class="map-nav-item"><a>Calendar</a></li>
+                    <li class="map-nav-item"><a>Notifications</a></li>
                 </ul>
             </nav>            
             <div class="map">
-
+                    <span>MAP</span>
             </div>
         </div>
 
         <div class="secondary-container">
             <div class="noti-container">
-
+                <span>Notifications</span>
             </div>
 
             <div class="socials-container">
@@ -49,9 +49,9 @@
         </div>
     </div>
 
-    <footer>
-        <span>Contacts</span>
-    </footer>
+    <div class="footer-container"> 
+        <span>CONTACTS</span>
+    </div>
 
 
 </body>
