Add Profile Bar; Update Styling;

--- a/Examples/index.html
+++ b/Examples/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Main Page</title>
+    <title>Landing Page</title>
     
     <link rel="stylesheet" type="text/css" href="index.css">
     
@@ -12,10 +12,17 @@
         <div class="header">
             <img id="header-logo" src="logo-2.png">
             <nav id="profile-nav">
-                <ul>
-                    <li><a>Login</a></li>
-                    <li><a>Signup</a></li>
+
+                <ul>                    
+                    <li>
+                        <img
+                        src="placeholder-icon.png"
+                        width="30px"
+                    >
+                    </li>                    
+                    <li><a>Profile</a></li>
                     <li><a>Help</a></li>
+                    <li><a>Logout</a></li>
                 </ul>
             </nav>
         </div>
@@ -35,7 +42,7 @@
         <div class="map-container">
             <nav id="map-nav">
                 <ul>
-                    <li class="map-nav-item"><a>Map</a></li>
+                    <li class="map-nav-item active"><a>Map</a></li>
                     <li class="map-nav-item"><a>Calendar</a></li>
                     <li class="map-nav-item"><a>Notifications</a></li>
                 </ul>
@@ -53,7 +60,6 @@
             <div class="socials-container">
                 <img 
                 id="twitter-feed" 
-                src="https://external-contentsds.duckduckgo.com/iu/?u=https%3A%2F%2Fps.w.org%2Fcustom-twitter-feeds%2Fassets%2Fscreenshot-1.png%3Frev%3D1804720&f=1&nofb=1"
                 alt="Social Media Placeholder"
                 >
             </div> 
@@ -61,7 +67,13 @@
     </div>
 
     <div class="footer-container"> 
-        <span>CONTACTS</span>
+        <ul>
+            <li><a>Contact</a></li>            
+            <li><a>Stuff</a></li>
+            <li><a>Main Site</a></li>
+            <li><a>Site Map</a></li>
+        </ul>
+        <span><a>Copyright XYZ</a></span>
     </div>
 
 
