Update Styling; Add Favicons;

--- a/Examples/index.html
+++ b/Examples/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <title>Landing Page</title>
-    
+    <title>Home - Genesis Trust VP</title>
+    <link rel="icon" href="/Resources/Images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="index.css">
     
 </head>
@@ -33,7 +33,7 @@
                 <li class="main-nav-item"><a>ROLES</a></li>
                 <li class="main-nav-item"><a>PROJECTS</a></li>
                 <li class="main-nav-item"><a>POLICIES</a></li>
-                <li class="main-nav-item"><a>SETTINGS</a></li>
+                <li class="main-nav-item"><a>SETTINGS</a></li>                
             </ul>
         </nav>
     </div>
