--- a/Examples/index.html
+++ b/Examples/index.html
@@ -12,7 +12,6 @@
         <div class="header">
             <img id="header-logo" src="logo-2.png">
             <nav id="profile-nav">
-
                 <ul>                    
                     <li>
                         <img
@@ -44,7 +43,7 @@
                 <ul>
                     <li class="map-nav-item active"><a>Map</a></li>
                     <li class="map-nav-item"><a>Calendar</a></li>
-                    <li class="map-nav-item"><a>Notifications</a></li>
+                    <li class="map-nav-item new-content-alert"><a>Notifications </a></li>
                 </ul>
             </nav>            
             <div class="map">
@@ -55,9 +54,12 @@
         <div class="secondary-container">
             <div class="noti-container">
                 <span>Notifications</span>
+                <p>
+                    Content
+                </p>
             </div>
 
-            <div class="socials-container">
+            <div class="socials-container hide">
                 <img 
                 id="twitter-feed" 
                 alt="Social Media Placeholder"
