--- a/Examples/index.html
+++ b/Examples/index.html
@@ -10,12 +10,12 @@
 <body>
     <div class="header-container">
         <div class="header">
-            <img id="header-logo" src="logo-2.png">
+            <img id="header-logo" src="/Resources/Images/logo-2.png">
             <nav id="profile-nav">
                 <ul>                    
                     <li>
                         <img
-                        src="placeholder-icon.png"
+                        src="/Resources/Images/placeholder-icon.png"
                         width="30px"
                     >
                     </li>                    
@@ -27,12 +27,12 @@
         </div>
         <nav id="main-nav">
             <ul>
-                <li class="main-nav-item active"><a href="/">HOME</a></li>
-                <li class="main-nav-item"><a>PROFILE</a></li>
-                <li class="main-nav-item"><a>ROLES</a></li>
-                <li class="main-nav-item"><a>PROJECTS</a></li>
-                <li class="main-nav-item"><a>POLICIES</a></li>
-                <li class="main-nav-item"><a>SETTINGS</a></li>                
+                <li class="main-nav-item active"><a href="/">Home</a></li>
+                <li class="main-nav-item"><a>Profile</a></li>
+                <li class="main-nav-item"><a>Roles</a></li>
+                <li class="main-nav-item"><a>Projects</a></li>
+                <li class="main-nav-item"><a>Policies</a></li>
+                <li class="main-nav-item"><a>Settings</a></li>                
             </ul>
         </nav>
     </div>
