--- a/Examples/index.html
+++ b/Examples/index.html
@@ -19,7 +19,8 @@
                         width="30px"
                     >
                     </li>                    
-                    <li><a>Profile</a></li>
+                    <li><a>Profile</a></li>                
+                    <li><a>Settings</a></li>
                     <li><a>Help</a></li>
                     <li><a>Logout</a></li>
                 </ul>
@@ -28,11 +29,9 @@
         <nav id="main-nav">
             <ul>
                 <li class="main-nav-item active"><a href="/">Home</a></li>
-                <li class="main-nav-item"><a>Profile</a></li>
                 <li class="main-nav-item"><a>Roles</a></li>
                 <li class="main-nav-item"><a>Projects</a></li>
                 <li class="main-nav-item"><a>Policies</a></li>
-                <li class="main-nav-item"><a>Settings</a></li>                
             </ul>
         </nav>
     </div>
@@ -43,7 +42,7 @@
                 <ul>
                     <li class="map-nav-item active"><a>Map</a></li>
                     <li class="map-nav-item"><a>Calendar</a></li>
-                    <li class="map-nav-item new-content-alert"><a>Notifications </a></li>
+                    <li class="map-nav-item new-content-alert"><a>Noticeboard</a></li>
                 </ul>
             </nav>            
             <div class="map">
@@ -54,17 +53,15 @@
         <div class="secondary-container">
             <div class="noti-container">
                 <span>Notifications</span>
-                <p>
-                    Content
-                </p>
-            </div>
+                <div>
+                    <ul>
+                        <li>Confirm Email Address</li>
+                        <li>Complete Application</li>
+                        <li>LMAO</li>
+                    </ul>
 
-            <div class="socials-container hide">
-                <img 
-                id="twitter-feed" 
-                alt="Social Media Placeholder"
-                >
-            </div> 
+                </div>
+            </div>
         </div>
     </div>
 
