Implement Basic Login Validation
Create js module that checks email and password before making database requests (front-end validation)

To do:
~Add password validation
~Update email validation
~Make http request to DB
~Style alert

--- a/Examples/login.html
+++ b/Examples/login.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Log in - Genesis Trust VP</title>
-    <link rel="stylesheet" type="text/css" href="login.css">
+    <link rel="stylesheet" type="text/css" href="login.css">    
 </head>
 
 <body>
@@ -14,9 +14,10 @@
             <ul>
                 <li id="login-tag">Member Login</li>
                 <li><input type="email" id="email" placeholder="Enter Email" size="45"></li>
-                <li><input type="password" id="password" placeholder="Enter Password" size="45"></li>
+                <li><input type="password" id="password" placeholder="Enter Password" size="45"></li>                
                 <li><button type="submit" id="login-button">LOGIN</button></li>
                 <li id="forgot-password-tag"><a>Forgot Password?</a></li>
+                <li><a href="index.html">Go to home Page</a></li>
             </ul>
         </div>
     </div>
@@ -25,5 +26,6 @@
 
     </div>
 
+    <script src="login.js"></script>
 </body>
 </html>
