--- a/Examples/login.html
+++ b/Examples/login.html
@@ -8,7 +8,7 @@
 <body>
     <div class="main-container">
         <div class="logo-container">
-            <img id="header-logo" src="logo-2.png">
+            <img id="header-logo" src="/Resources/Images/logo-2.png">
         </div>
         <div class="login-container">
             <ul>
