personal detail labels added
added labels for where personal details should be going

--- a/Examples/profile-page/profile.html
+++ b/Examples/profile-page/profile.html
@@ -28,9 +28,7 @@
         </div>
 
         <nav id="main-nav">
-            <ul>
-                <!--<li class="main-nav-item active"><a href="/">Home</a></li>-->
-                
+            <ul>                
                 <li class="main-nav-item"><a>Home</a></li>
                 <li class="main-nav-item"><a>Roles</a></li>
                 <li class="main-nav-item"><a>Projects</a></li>
@@ -41,12 +39,25 @@
     </div>
 
     <div class="main-container">
-        <div class ="profile">
+
+        <div class ="image-container">
             <img id="profile-image" src= "/Resources/Images/ProfilePicture.jpg">
 
+            <!--only want this to show when hovering over the image, when it goes transparent-->
             <div class="edit_image">Change Image</div>
 
         </div>
+
+        <div class="personal-details-container">
+            <div class="personal-details">Name</div>
+
+            <div class="personal-details">Email</div>
+
+            <div class="personal-details">Current Roles</div>
+
+            <div class="personal-details">Applications</div>
+        </div>
+
 
     </div>
 
