Password input type
Changed password input to password type.

--- a/MattSignUp/signup.html
+++ b/MattSignUp/signup.html
@@ -24,12 +24,12 @@
                 </ul>
                 <ul>
                 
-                    <input type="text" placeholder="Password">
+                    <input type="password" placeholder="Password">
                     <span style="color:red; font-size: 18px;">*</span>
                 </ul>
                 <ul>
                     
-                     <input type="text" placeholder="Confirm Password">
+                     <input type="password" placeholder="Confirm Password">
                      <span style="color:red; font-size: 18px;">*</span>
                 </ul>
                 <ul>
