--- a/Examples/site-map.html
+++ b/Examples/site-map.html
@@ -2,7 +2,8 @@
     <head>
         <title>Home - Genesis Trust VP</title>
         <link rel="icon" href="../Resources/Images/favicon.ico">
-        <link rel="stylesheet" type="text/css" href="main.css">                
+        <link rel="stylesheet" type="text/css" href="main.css">   
+        <link rel="stylesheet" type="text/css" href="site-map.css">             
     </head>
 
     <body>
@@ -37,12 +38,14 @@
         <div class="main-container">
             <div class="map-container">
                 <p>
+                    <h1>Site Map</h1>
+                    <h2>All locations of Genesis Trust are shown on the map</h2>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6458.942132247702!2d-2.3584520281474424!3d51.37985120403112!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4171ca17f9a6a33d%3A0x3487dccadd82b4ca!2sGenesis%20Trust%20Bath%20Office!5e0!3m2!1sen!2suk!4v1583163901267!5m2!1sen!2suk" 
-                    width = "1900"
-                    height="650" 
-                    frameborder="0" 
+                    width = "1880"
+                    height="580" 
+                    frameborder="2" 
                     style="border:0;" 
-                    allowfullscreen="Yes">
+                    allowfullscreen="">
                     </iframe>                
                 </p>
             </div>
