--- a/Examples/profile.html
+++ b/Examples/profile.html
@@ -3,7 +3,8 @@
     <title>Profile Page</title>
     <link rel="icon" href="/Resources/Images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="profile.css">
-
+    <link rel="stylesheet" type="text/css" href="main.css">
+    
 </head>
 
 <body>
@@ -38,26 +39,32 @@
 
     </div>
 
-    <div class="main-container">
+    <div class = "main-container">
 
-        <div class ="image-container">
-            <img id="profile-image" src= "/Resources/Images/ProfilePicture.jpg">
+        <div class = "profile-container">
 
-            <!--only want this to show when hovering over the image, when it goes transparent-->
-            <div class="edit_image">Change Image</div>
+            <div class = "image-container">
+                <img class = "profile-image" src = "/Resources/Images/ProfilePicture.jpg">
+
+                <!--only want this to show when hovering over the image, when it goes transparent-->
+                <span>Change Image</span>
+
+            </div>
+
+            <div class = "details-container">
+                <ul class = "details-ul">                
+                    <li class = "details-label">Name</li>
+                    <li class = "details-element">Clive Alive</li>
+                    <li class = "details-label">Email</li>
+                    <li class = "details-element">Clive Alive</li>
+                    <li class = "details-label">Current Roles</li>
+                    <li class = "details-element">Clive Alive</li>
+                    <li class = "details-label">Applications</li>
+                    <li class = "details-element">Clive Alive</li>
+                </ul>
+            </div>
 
         </div>
-
-        <div class="personal-details-container">
-            <div class="personal-details">Name</div>
-
-            <div class="personal-details">Email</div>
-
-            <div class="personal-details">Current Roles</div>
-
-            <div class="personal-details">Applications</div>
-        </div>
-
 
     </div>
 
