Radio button changes

--- a/Examples/Settings-page.html
+++ b/Examples/Settings-page.html
@@ -56,7 +56,7 @@
                     Volunteer Status:
                 </li>
                 <li class = "radiob">
-                    <input type="radio" id="active" name="stauts" value="active">
+                    <input type="radio" id="active" name="status" value="active">
                     <label for="active">Active</label><br>
                 </li>
                 <li class = "radiob">
