Help and policy page updated to js

--- a/Examples/login.html
+++ b/Examples/login.html
@@ -8,7 +8,7 @@
 <body>
     <div class="main-container">
         <div class="logo-container">
-            <img id="header-logo" alt="Genesis Trust" src="/Resources/Images/logo-2.png">
+            <img id="header-logo" src="logo-2.png">
         </div>
         <div class="login-container">
             <ul>
@@ -16,8 +16,8 @@
                 <li><input type="email" id="email" placeholder="Enter Email" size="45"></li>
                 <li><input type="password" id="password" placeholder="Enter Password" size="45"></li>                
                 <li><button type="submit" id="login-button">LOGIN</button></li>
-                <li id="sign-up-tag"><a href="/MattSignUp/signup.html">SIGN UP</a></li>
-                <li id="forgot-password-tag"><a href="forgot-password.html">Forgot Password?</a></li>
+                <li id="forgot-password-tag"><a>Forgot Password?</a></li>
+                <li><a href="index.html">Go to home Page</a></li>
             </ul>
         </div>
     </div>
@@ -26,6 +26,6 @@
 
     </div>
 
-    <script src="validate.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
