--- a/Examples/profile.html
+++ b/Examples/profile.html
@@ -17,8 +17,7 @@
                     <li class="main-nav-item">
                         <img
                         src="/Resources/Images/placeholder-icon.png"
-                        width="30px"
-                    >
+                        width="30px">
                     </li>                    
                     <li class="main-nav-item"><a>Profile</a></li>                
                     <li class="main-nav-item"><a>Settings</a></li>
@@ -69,7 +68,7 @@
                 <ul>
                   <li class="prev">&#10094;</li>
                   <li class="next">&#10095;</li>
-                  <li>August<br><span style="font-size:18px">2017</span></li>
+                  <li>March<br><span style="font-size:18px">2020</span></li>
                 </ul>
               </div>
               
