Revert "Added some changed to the help page and added some links"
This reverts commit 37efb12ed5db3262040fa81ea2ed26b7ddeeeac3, reversing
changes made to 54ccac4287acbbb6bae6a1950538488baeae75f2.

--- a/Examples/profile.html
+++ b/Examples/profile.html
@@ -17,7 +17,8 @@
                     <li class="main-nav-item">
                         <img
                         src="/Resources/Images/placeholder-icon.png"
-                        width="30px">
+                        width="30px"
+                    >
                     </li>                    
                     <li class="main-nav-item"><a>Profile</a></li>                
                     <li class="main-nav-item"><a>Settings</a></li>
@@ -68,7 +69,7 @@
                 <ul>
                   <li class="prev">&#10094;</li>
                   <li class="next">&#10095;</li>
-                  <li>March<br><span style="font-size:18px">2020</span></li>
+                  <li>August<br><span style="font-size:18px">2017</span></li>
                 </ul>
               </div>
               
