--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -21,6 +21,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <div id="root">      
     </div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkz4BpuGT57kXKhLA39NUDAeCN1zss8q8"
+    async defer></script>
 
   </body>
 </html>
