--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -19,7 +19,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkz4BpuGT57kXKhLA39NUDAeCN1zss8q8"
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkz4BpuGT57kXKhLA39NUDAeCN1zss8q8"
     async defer></script>
     <div id="root">      
     </div>
